[package]
name = "eventually-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.16"
eventually = "0.4.0"
futures = "0.3.17"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.29"
